--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "forge-tomorrow-starter",
+  "name": "forge-tomorrow",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.4.5",
+    "next": "13.4.13",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "chart.js": "^4.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.2"
   }
 }
