--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^4.3.0",
+    "emailjs-com": "^3.2.0",
     "next": "13.4.13",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "chart.js": "^4.3.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
