--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "chart.js": "^4.3.0",
-    "emailjs-com": "^3.2.0",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
