--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "chart.js": "^4.3.0",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
+    "html2pdf.js": "^0.10.3",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
