--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-pdf/renderer": "^4.3.0",
     "chart.js": "^4.3.0",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
