--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.3",
+    "lucide-react": "^0.539.0",
     "next": "13.4.13",
     "prisma": "^6.14.0",
     "react": "18.2.0",
