--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.3",
+    "jspdf": "3.0.2",
     "lucide-react": "^0.539.0",
-    "next": "13.4.13",
+    "next": "14.2.32",
     "prisma": "^6.14.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "zod": "3.22.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
