--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "chart.js": "^4.3.0",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
+    "formidable": "^3.5.4",
     "html2pdf.js": "^0.10.3",
     "jspdf": "3.0.2",
     "lucide-react": "^0.539.0",
+    "mammoth": "^1.10.0",
     "next": "14.2.32",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.4.54",
     "prisma": "^6.14.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
