--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "zod": "3.22.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "autoprefixer": "^10.4.14",
