--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev -p 3001",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start -p 3001",
     "seed": "node prisma/seed.js"
   },
@@ -25,9 +25,9 @@
     "formidable": "^3.5.4",
     "groq-sdk": "^0.34.0",
     "html2pdf.js": "^0.10.3",
-    "jsonwebtoken": "^9.0.2",
     "jspdf": "3.0.2",
     "jszip": "^3.10.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
     "mammoth": "^1.10.0",
     "next": "14.2.32",
@@ -44,8 +44,8 @@
     "zod": "3.22.3"
   },
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "autoprefixer": "^10.4.14",
