--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "formidable": "^3.5.4",
     "groq-sdk": "^0.34.0",
     "html2pdf.js": "^0.10.3",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "3.0.2",
     "jszip": "^3.10.1",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
     "mammoth": "^1.10.0",
     "next": "14.2.32",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.10",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.4.54",
     "pg": "^8.16.3",
