--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
     "next": "14.2.32",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
+    "otplib": "^12.0.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.4.54",
     "pg": "^8.16.3",
     "prisma": "^6.14.0",
+    "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.1.2",
+    "speakeasy": "^2.0.0",
     "zod": "3.22.3"
   },
   "devDependencies": {
