--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
     "@react-pdf/renderer": "^4.3.0",
+    "@supabase/supabase-js": "^2.81.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.3.0",
