--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
     "@react-pdf/renderer": "^4.3.0",
+    "@stripe/stripe-js": "^8.4.0",
     "@supabase/supabase-js": "^2.81.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
@@ -46,6 +47,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^3.1.2",
     "speakeasy": "^2.0.0",
+    "stripe": "^19.3.1",
     "zod": "3.22.3"
   },
   "devDependencies": {
