--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "jszip": "^3.10.1",
     "lucide-react": "^0.539.0",
     "mammoth": "^1.10.0",
+    "micro": "^10.0.1",
+    "micro-cors": "^0.1.1",
     "next": "14.2.32",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
