--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.1.2",
     "speakeasy": "^2.0.0",
