--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "formidable": "^3.5.4",
+    "framer-motion": "^12.23.24",
     "groq-sdk": "^0.34.0",
     "html2pdf.js": "^0.10.3",
     "jsonwebtoken": "^9.0.2",
@@ -37,6 +38,7 @@
     "next": "14.2.32",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
+    "openai": "^6.9.1",
     "otplib": "^12.0.1",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.4.54",
@@ -48,6 +50,7 @@
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.0",
     "recharts": "^3.1.2",
     "speakeasy": "^2.0.0",
     "stripe": "^19.3.1",
