--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "recharts": "^3.1.2",
     "speakeasy": "^2.0.0",
     "stripe": "^19.3.1",
-    "zod": "3.22.3"
+    "zod": "^3.25.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
