--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-pdf/renderer": "^4.3.0",
     "@stripe/stripe-js": "^8.4.0",
     "@supabase/supabase-js": "^2.81.1",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.6",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.3.0",
