--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-is": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.1.2",
     "speakeasy": "^2.0.0",
     "stripe": "^19.3.1",
@@ -62,7 +63,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
+    "@types/react": "^19.2.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
