--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.6",
     "autoprefixer": "^10.4.14",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.5",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "5.9.3"
