--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "prisma generate && next build",
     "start": "next start -p 3001",
     "seed": "node prisma/seed.js",
-	"seed:candidates": "node ./scripts/seedCandidates.js"
+    "seed:candidates": "node ./scripts/seedCandidates.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -18,7 +18,7 @@
     "@google/generative-ai": "^0.24.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
-	"@prisma/engines": "6.14.0",
+    "@prisma/engines": "6.14.0",
     "@react-pdf/renderer": "^4.3.0",
     "@stripe/stripe-js": "^8.4.0",
     "@supabase/supabase-js": "^2.81.1",
@@ -40,7 +40,7 @@
     "mammoth": "^1.10.0",
     "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
-    "next": "14.2.32",
+    "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
     "openai": "^6.9.1",
@@ -50,9 +50,9 @@
     "pg": "^8.16.3",
     "prisma": "^6.14.0",
     "qrcode": "^1.5.4",
-    "react": "18.2.0",
+    "react": "^19.2.3",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.2.3",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-is": "^19.2.0",
